<resources>
    <string name="app_name">Spotifymer</string>

    <string name="undo">Undo</string>
    <string name="recommend">RECOMMEND ME</string>
    <string name="image">image</string>
    <string name="search">SEARCH</string>
    <string name="artist">Artist</string>
    <string name="track">Track</string>
    <string name="genre">Genre</string>
    <string name="acousticness">Acousticness</string>
    <string name="danceability">Danceability</string>
    <string name="energy">Energy</string>
    <string name="instrumentalness">Instrumentalness</string>
    <string name="liveness">Liveness</string>
    <string name="loudness">Loudness</string>
    <string name="popularity">Popularity</string>
    <string name="speechiness">Speechiness</string>
    <string name="tempo">Tempo</string>
    <string name="valence">Valence</string>
    <string name="album_icon">Album icon</string>
    <string name="new_playlist">New Playlist</string>
    <string name="defaultEnergy">0.5</string>
    <string name="defaultTempo">125</string>
    <string name="defaultValence">0.5</string>
    <string name="defaultDanceability">0.5</string>
    <string name="searches">Searches</string>
    <string name="yourPlaylists">Your Playlists</string>
    <string name="songs">Songs</string>
<!--    Chyba ve stringu -->
    <string name="download"><DOWNLOAD></DOWNLOAD></string>
    <string name="back">BACK</string>
    <string name="download_spotify">To use this functionality, please install Spotify app from store.</string>
    <string name="create">CREATE</string>
    <string name="enter_search_input">Enter search input</string>
    <string name="play">PLAY</string>
</resources>
