<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="@dimen/margin_medium"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondary"
                    android:contentDescription="@string/album_icon"
                    android:padding="@dimen/padding_medium"
                    android:src="@drawable/baseline_album_black_18dp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/album_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondary"
                    android:hint="@string/new_playlist" />
            </LinearLayout>

            <TextView
                android:id="@+id/searches_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/searches"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selected_search_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/searches_view"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/search"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_search_recycler_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_chip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/tempo_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tempo" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/valence_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valence" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/danceability_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danceability" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/energy_chip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/energy" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tempo_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/tempo"
                    android:textColor="@color/colorOnPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <SeekBar
                        android:id="@+id/tempo_seekbar"
                        android:max="250"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="7" />

                    <TextView
                        android:id="@+id/tempo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/defaultTempo"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/valence_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/valence"
                    android:textColor="@color/colorOnPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <SeekBar
                        android:id="@+id/valence_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="7"/>

                    <TextView
                        android:id="@+id/valence_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/defaultValence"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/danceability_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/danceability"
                    android:textColor="@color/colorOnPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <SeekBar
                        android:id="@+id/danceability_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="7" />

                    <TextView
                        android:id="@+id/danceability_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/defaultDanceability"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/energy_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/energy"
                    android:textColor="@color/colorOnPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <SeekBar
                        android:id="@+id/energy_seekbar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="7" />

                    <TextView
                        android:id="@+id/energy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/defaultEnergy"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_recommendations_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/colorPrimaryVariant"
        app:srcCompat="@drawable/baseline_add_white_18dp"
        app:tint="@color/colorOnPrimary" />

</FrameLayout>