<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.search_menu.SearchMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/search_artists_chip"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/search_artists_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/search_tracks_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/search_genres_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary"
                android:padding="@dimen/padding_small"
                android:src="@drawable/baseline_search_black_18dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="70dp"
            android:scrollbars="vertical" />

    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginVertical="@dimen/margin_medium"
        android:padding="@dimen/padding_medium"
        android:text="@string/search"
        app:cornerRadius="20dp" />

</FrameLayout>